# xilo-legacy

./: Cargo.toml  README.md
src/: command.rs  config.rs  error.rs  initializer.rs  main.rs  remover.rs  space_shower.rs  terminal.rs
