[package]
name = "xilo"
version = "0.4.0"
edition = "2021"
description = "A simple replacement of \"rm\" command"
license = "MIT"
repository = "https://github.com/e0328eric/xilo"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
base64ct = { version = "1.6", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
dirs = "5.0.0"
fs_extra = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
thiserror = "1.0"
